force-app/main/default/objects/PDLM__Change__c/PDLM__Change__c.object-meta.xml
<CustomObject>
    <description>Change Orders for product and manufacturing changes</description>
    <label>Change</label>
    <nameField>
        <label>Change Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Changes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>