force-app/main/default/objects/PDLM__Change__c/fields/Beta_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Beta_Start_Date__c</fullName>
    <label>Beta Start Date</label>
    <type>Date</type>
</CustomField>