force-app/main/default/objects/PDLM__Change__c/fields/Control_Run_Results__c.field-meta.xml
<CustomField>
    <fullName>Control_Run_Results__c</fullName>
    <label>Control Run Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>