force-app/main/default/objects/PDLM__Change__c/fields/FCC_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>FCC_Approval_Required__c</fullName>
    <label>FCC Approval Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>