force-app/main/default/objects/PDLM__Change__c/fields/PDLM__Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Approved_Date__c</fullName>
    <description>The date this change was approved, filled by system.</description>
    <inlineHelpText>The date this change was approved, filled by system.</inlineHelpText>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>