force-app/main/default/objects/PDLM__Change__c/fields/PDLM__Category_Control__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Category_Control__c</fullName>
    <description>Used to serve as a controlling picklist, set by change trigger</description>
    <label>Category Control</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>