force-app/main/default/objects/PDLM__Change__c/fields/Quality_Impact_Test__c.field-meta.xml
<CustomField>
    <fullName>Quality_Impact_Test__c</fullName>
    <label>Quality Impact(Test)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>