force-app/main/default/objects/PDLM__Change__c/fields/Reliability_Testing_Required__c.field-meta.xml
<CustomField>
    <fullName>Reliability_Testing_Required__c</fullName>
    <description>QA to determine if Reliability Testing is Required</description>
    <inlineHelpText>QA to determine if Reliability Testing is Required</inlineHelpText>
    <label>Reliability Testing Required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>