force-app/main/default/objects/PDLM__Change__c/fields/Stop_Ship_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Stop_Ship_End_Date__c</fullName>
    <formula>PDLM__Closed_Date_Time__c</formula>
    <inlineHelpText>System calculated. Auto filled when Stop Ship Enters Expired phase</inlineHelpText>
    <label>Stop Ship End Date</label>
    <type>Date</type>
</CustomField>