force-app/main/default/objects/PDLM__Change__c/validationRules/Affected_Items_required_for_ECO.validationRule-meta.xml
<ValidationRule>
    <fullName>Affected_Items_required_for_ECO</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    PDLM__Status_lk__r.Name  = &quot;Doc Control&quot;,
    PDLM__Category__r.Name = &quot;Engineering Change Order (ECO)&quot;,
    PDLM__Affected_Item_Counter__c =0
)</errorConditionFormula>
    <errorMessage>Affected Items are required on an Engineering Change Order</errorMessage>
</ValidationRule>