force-app/main/default/objects/PDLM__Change__c/validationRules/End_Date_greater_than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_greater_than_Start_Date</fullName>
    <active>true</active>
    <description>End Date should be greater than Start Date</description>
    <errorConditionFormula>End_Date__c  &lt;  Start_Date__c</errorConditionFormula>
    <errorMessage>Deviation End Date cannot be before Deviation Start Date</errorMessage>
</ValidationRule>