force-app/main/default/objects/PDLM__Change__c/validationRules/If_yes_deviation_from_running_change_req.validationRule-meta.xml
<ValidationRule>
    <fullName>If_yes_deviation_from_running_change_req</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
OR (
ISPICKVAL(Deviation_from_running_change_req__c, &quot;Yes&quot;)),
ISBLANK(Comment__c)
)</errorConditionFormula>
    <errorMessage>If yes is entered for Deviation from running change req?, enter comment.</errorMessage>
</ValidationRule>