force-app/main/default/objects/PDLM__Change__c/validationRules/PDLM__change_quality_uniqueness.validationRule-meta.xml
<ValidationRule>
    <fullName>PDLM__change_quality_uniqueness</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(VLOOKUP($ObjectType.PDLM__Change__c.Fields.Name, $ObjectType.PDLM__Change__c.Fields.Name, Name) = Name, VLOOKUP($ObjectType.PDLM__Quality__c.Fields.Name, $ObjectType.PDLM__Quality__c.Fields.Name, Name) = Name), OR(ISNEW(), ISCHANGED(Name)))</errorConditionFormula>
    <errorMessage>This name already exists as a Change / Quality</errorMessage>
</ValidationRule>