force-app/main/default/objects/PDLM__Change__c/listViews/All_Deviations.listView-meta.xml
<ListView>
    <fullName>All_Deviations</fullName>
    <columns>NAME</columns>
    <columns>PDLM__Title__c</columns>
    <columns>Priority__c</columns>
    <columns>Propel_Change_Owner__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>PDLM__Approved_Date__c</columns>
    <columns>PDLM__Status_lk__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PDLM__Category__c</field>
        <operation>equals</operation>
        <value>Deviation</value>
    </filters>
    <label>All Deviations</label>
</ListView>