force-app/main/default/objects/PDLM__Change__c/listViews/All_ECOs.listView-meta.xml
<ListView>
    <fullName>All_ECOs</fullName>
    <columns>NAME</columns>
    <columns>PDLM__Title__c</columns>
    <columns>Priority__c</columns>
    <columns>Propel_Change_Owner__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>PDLM__Approved_Date__c</columns>
    <columns>PDLM__Status_lk__c</columns>
    <columns>PDLM__Approved_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PDLM__Category__c</field>
        <operation>equals</operation>
        <value>Engineering Change Order (ECO)</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>geroleen</value>
    </filters>
    <label>All Engineering Change Orders (ECO)</label>
</ListView>