force-app/main/default/objects/PDLM__Change__c/listViews/All_Engineering_Change_Requests_ECR.listView-meta.xml
<ListView>
    <fullName>All_Engineering_Change_Requests_ECR</fullName>
    <columns>NAME</columns>
    <columns>PDLM__Title__c</columns>
    <columns>Priority__c</columns>
    <columns>Propel_Change_Owner__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>PDLM__Approved_Date__c</columns>
    <columns>PDLM__Status_lk__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PDLM__Category__c</field>
        <operation>equals</operation>
        <value>Engineering Change Request (ECR)</value>
    </filters>
    <label>All Engineering Change Requests (ECR)</label>
</ListView>