force-app/main/default/objects/PDLM__Change__c/listViews/All_MCO.listView-meta.xml
<ListView>
    <fullName>All_MCO</fullName>
    <columns>NAME</columns>
    <columns>PDLM__Title__c</columns>
    <columns>Priority__c</columns>
    <columns>Propel_Change_Owner__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>PDLM__Approved_Date__c</columns>
    <columns>PDLM__Status_lk__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PDLM__Category__c</field>
        <operation>contains</operation>
        <value>MCO</value>
    </filters>
    <filters>
        <field>PDLM__Category__c</field>
        <operation>notContain</operation>
        <value>SKU</value>
    </filters>
    <label>All MCO</label>
</ListView>