force-app/main/default/objects/PDLM__Change__c/listViews/All_Supplier_Changes.listView-meta.xml
<ListView>
    <fullName>All_Supplier_Changes</fullName>
    <columns>NAME</columns>
    <columns>PDLM__Title__c</columns>
    <columns>PDLM__Status_lk__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>PDLM__Description_5000__c</columns>
    <filterScope>Everything</filterScope>
    <label>All-Supplier-Changes</label>
</ListView>