force-app/main/default/objects/PDLM__Change__c/listViews/Quality_Hold_StopShips.listView-meta.xml
<ListView>
    <fullName>Quality_Hold_StopShips</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>PDLM__Status_lk__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>PDLM__Category__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>PDLM__Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PDLM__Category__c</field>
        <operation>contains</operation>
        <value>hold</value>
    </filters>
    <filters>
        <field>PDLM__Category__c</field>
        <operation>contains</operation>
        <value>Stop</value>
    </filters>
    <label>Quality Hold (StopShips)</label>
    <sharedTo>
        <group>Propel_PLM_Doc_Control_Group</group>
    </sharedTo>
</ListView>